# rchess

./: Cargo.toml
src/: ai.rs  board.rs  lib.rs  main.rs
src/pieces/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
