[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# env_logger = "0.10.1"
log = "0.4.20"


[dev-dependencies]
env_logger = "0.10.1"

[profile.test]
build-override.debug = true

[env]
RUST_LOG = "debug"