[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drawille = "0.3.0"
# env_logger = "0.10.1"
log = "0.4.20"
mockall = "0.13.1"


[dev-dependencies]
env_logger = "0.10.1"
mockall = "0.13.1"

[profile.test]
build-override.debug = true

[env]
RUST_LOG = "debug"
